# Those-Who-Remain-Here

./: .gitignore  LICENSE  README.md  proyecto.code-workspace
src/: CMakeLists.txt  Juego.cpp
src/PNJ/: PuntoGuardado.cpp  PuntoGuardado.h  Tendero.cpp  Tendero.h  Trucos.cpp  Trucos.h  Tutorial.cpp  Tutorial.h
src/archivos/: Aguila.cpp  Aguila.h  Animacion.cpp  Animacion.h  Arma.cpp  Arma.h  ArmaSuelta.cpp  ArmaSuelta.h  Buitre.cpp  Buitre.h  CMakeLists.txt  Chaman.cpp  Chaman.h  Cofre.cpp  Cofre.h  ControladorSonido.cpp  ControladorSonido.h  CumuloMateriales.cpp  CumuloMateriales.h  Detenible.cpp  Detenible.h  Duende.cpp  Duende.h  ElementoEntorno.cpp  ElementoEntorno.h  Enemigo.cpp  Enemigo.h  Escenario.cpp  Escenario.h  Escopeta.cpp  Escopeta.h  EscudoSuelto.cpp  EscudoSuelto.h  EspiritusOscuros.cpp  EspiritusOscuros.h  Esqueleto.cpp  Esqueleto.h  EstadoInventario.cpp  EstadoInventario.h  EstadoJuego.h  (+144 more)
src/fachada/: ArrayVertices.cpp  ArrayVertices.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Evento.cpp  Evento.h  Fuente.cpp  Fuente.h  Musica.cpp  Musica.h  Reloj.cpp  Reloj.h  Sonido.cpp  Sonido.h  Sprite.cpp  Sprite.h  Texto.cpp  Texto.h  Textura.cpp  Textura.h  Tiempo.cpp  Tiempo.h  VentanaRender.cpp  VentanaRender.h  Vista.cpp  Vista.h
src/tinyxml2/: CMakeLists.txt  EscritorXML.cpp  EscritorXML.h  LectorXML.cpp  LectorXML.h
